@@ -73,6 +73,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - CADDCL                 Roberto Rossi
 - CadLisp                Roberto Rossi
 - CDFG                   John Horigan
+- ChaiScript             Jason Turner, Jonathan Turner
 - CIL                    Marcus Griep
 - Clojure                Jess Johnson
 - CMake                  Daniel Nelson
